<resources>
    <string name="app_name">Journal</string>

    <!--Splash Activity-->
    <string name="splash_icon_desc">Journal app icon</string>
    <string name="splash_next_desc">Next step icon</string>
    <string name="user_welcome">Welcome to Journal!</string>
    <string name="user_greetings">Welcome back, %1$s!</string>
    <string name="username">Username</string>
    <string name="passcode">Passcode</string>
    <string name="permission_title">Location permission</string>
    <string name="permission_explain">Journal requests your permission only to save the location of your photos</string>
    <string name="permission_warning">Journal NEEDS your permission for location to be fully functional</string>

    <!--Main Activity-->
    <string name="main_title">Timeline</string>
    <string name="action_settings">Settings</string>
    <string name="action_demo">Setup demo data</string>
    <string name="general_img_desc">Image taken at %1$s</string>
    <string name="empty_display_text">Your Journal is empty. Start by adding a new entry using the button below</string>

    <!--Post Activity-->
    <string name="post_title">New moment</string>
    <string name="edit_title">Edit moment</string>
    <string name="post_image_desc">Captured image</string>
    <string name="cancel_desc">Cancel button</string>
    <string name="save_desc">Save button</string>
    <string name="description_hint">Save your thoughts here…</string>

    <!--Single Post Activity-->
    <string name="date_and_month" translatable="false">%1$s</string>
    <string name="year" translatable="false">%1$s</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="weather">Sunny</string>
    <string name="icon_des_date">calendar icon</string>
    <string name="icon_des_location">map marker icon</string>
    <string name="icon_des_quote">quote icon</string>
    <string name="img_desc">image</string>
    <string name="action_menu">options</string>

    <!--settings Activity-->
    <string name="settings_title">Settings</string>

    <!--Shared Preferences-->
    <string name="prefs_key_category_timeline" translatable="false">prefs_cat_timeline</string>
    <string name="category_timeline">Timeline display</string>

    <string name="prefs_key_view_mode" translatable="false">prefs_ViewMode</string>
    <string name="prefs_title_view_mode">View mode</string>
    <string name="prefs_dialog_title_view_mode">Select view mode</string>
    <string-array name="ViewMode_names">
        <item>Timeline View</item>
        <item>Grid View</item>
        <item>Map View</item>
    </string-array>
    <string-array name="ViewMode_values">
        <item>LIST</item>
        <item>GRID</item>
        <item>MAP</item>
    </string-array>

    <string name="prefs_key_grid_span" translatable="false">prefs_GridSpan</string>
    <string name="prefs_title_grid_span">Grid view: Images per row</string>
    <string name="prefs_dialog_title_grid_span">Select image(s) per row</string>
    <string-array name="GridSpan_names">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="GridSpan_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="prefs_key_category_general" translatable="false">prefs_cat_general</string>
    <string name="category_general">General</string>

    <string name="prefs_key_app_theme" translatable="false">prefs_Theme</string>
    <string name="prefs_title_app_theme">App theme</string>
    <string name="prefs_dialog_title_app_theme">Select theme</string>
    <string-array name="Theme_names">
        <item>Light mode</item>
        <item>Dark mode</item>
    </string-array>
    <string-array name="Theme_values">
        <item>LIGHT</item>
        <item>DARK</item>
    </string-array>


    <string name="prefs_key_first_visit" translatable="false">prefs_FirstVisit</string>

    <string name="prefs_key_category_user" translatable="false">prefs_cat_user</string>
    <string name="category_user">User settings</string>

    <string name="prefs_key_username" translatable="false">prefs_Username</string>
    <string name="prefs_title_username">Change username</string>
    <string name="prefs_username_default">User</string>

    <string name="prefs_key_passcode" translatable="false">prefs_Passcode</string>
    <string name="prefs_title_passcode">Change passcode</string>

    <string name="prefs_key_demo" translatable="false">prefs_Demo</string>

    <!--Errors-->
    <string name="location_error">Location error</string>

    <!--Delete Dialog-->
    <string name="delete_dialog_title">Delete entry?</string>
    <string name="delete_dialog_confirm">Yes</string>
    <string name="delete_dialog_cancel">No</string>
    <string name="delete_dialog_message">Erased memories cannot be restored!</string>

    <!--Modal bottom sheet-->
    <string name="modal_title">Select action</string>
    <string name="modal_share_text">Share</string>
    <string name="modal_delete_text">Delete</string>
    <string name="modal_gallery_text">View in gallery</string>
    <string name="modal_wiki_text">Wiki search</string>

    <!--Messages and errors-->
    <string name="toast_empty_desc">Description empty. Please fill!</string>
    <string name="snackbar_deleted_entry">Journal entry deleted</string>
    <string name="toast_share">Share is under development at the moment</string>
    <string name="toast_error_gallery">Error opening app</string>
    <string name="username_error">Please enter your username</string>
    <string name="password_error">Please enter your password</string>
    <string name="password_blank">Use your password to get back</string>
    <string name="password_wrong">Wrong password, try again!</string>
    <string name="memory_empty">Storage space not available</string>
    <string name="toast_empty_image">Image empty. Cannot save</string>
    <string name="toast_empty_location">Cannot find location. Please try taking picture again</string>

    <!--Other-->
    <string name="title_activity_single_post">SinglePostActivity</string>
    <string name="weather_api_key">e6c73a05c97ed9be65c1c563256fea42</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts."
    </string>
</resources>
