<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/prefs_key_category_general"
        android:title="@string/category_general">
        <ListPreference
            android:defaultValue="LIGHT"
            android:dialogTitle="@string/prefs_dialog_title_app_theme"
            android:entries="@array/Theme_names"
            android:entryValues="@array/Theme_values"
            android:icon="@drawable/theme"
            android:key="@string/prefs_key_app_theme"
            android:summary="%s"
            android:title="@string/prefs_title_app_theme" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_user"
        android:key="@string/prefs_key_category_user">

        <EditTextPreference
            android:defaultValue="@string/prefs_username_default"
            android:icon="@drawable/user"
            android:key="@string/prefs_key_username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/prefs_title_username" />
        <EditTextPreference
            android:defaultValue="0000"
            android:icon="@drawable/passcode"
            android:inputType="numberPassword"
            android:key="@string/prefs_key_passcode"
            android:maxLength="4"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/prefs_title_passcode" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/prefs_key_category_timeline"
        android:title="@string/category_timeline">
        <ListPreference
            android:defaultValue="LIST"
            android:dialogTitle="@string/prefs_dialog_title_view_mode"
            android:entries="@array/ViewMode_names"
            android:entryValues="@array/ViewMode_values"
            android:icon="@drawable/view"
            android:key="@string/prefs_key_view_mode"
            android:summary="%s"
            android:title="@string/prefs_title_view_mode" />
        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/prefs_dialog_title_grid_span"
            android:entries="@array/GridSpan_names"
            android:entryValues="@array/GridSpan_values"
            android:icon="@drawable/grid"
            android:key="@string/prefs_key_grid_span"
            android:summary="%s"
            android:title="@string/prefs_title_grid_span" />
    </PreferenceCategory>
</PreferenceScreen>